# playbot

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
playbot/: bot.py  main.py
playbot/plugins/: card.py  control.py  dice.py  link_peek.py  linkpeek.py  say.py
playbot/plugins/CvH/: AddBlackData.py  AddWhiteData.py  App.py  DataSource.py  __init__.py
playbot/plugins/fortune/: __init__.py  build_db.py  data_source.py  fortune.py
