[metadata]
name = PlayBot
summary = Simple IRC bot to do fun stuff
description-file =
    README.md
author = Pixel Pit Denizens
author-email = tim.callidus@gmail.com
home-page = https://github.com/callidus/playbot
classifier =
    Environment :: Internet
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Topic :: Networking

[files]
packages =
    playbot
